add product from json

--- a/users.html
+++ b/users.html
@@ -10,6 +10,13 @@
 
 <body class="bg-gray-50 dark:bg-gray-900">
     <div class="container mx-auto px-4 py-8">
+        <nav class="flex justify-end space-x-4 mb-6">
+            <a href="./index.html" class="text-blue-600 hover:underline">Home</a>
+            <a href="./users.html" class="text-blue-600 hover:underline">Manage Users</a>
+            <a href="./products.html" class="text-blue-600 hover:underline">Manage Products</a>
+            <a href="./orders.html" class="text-blue-600 hover:underline">Manage Orders</a>
+            <a href="./add-product-json.html" class="text-blue-600 hover:underline">Add Product with JSON</a>
+        </nav>
         <h1 class="text-3xl font-bold text-gray-900 dark:text-white mb-6">Manage Users</h1>
 
         <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 mb-8">
