--- a/index.html
+++ b/index.html
@@ -46,6 +46,17 @@
                     </svg>
                     Manage Orders
                 </a>
+
+                <a href="./add-product-json.html"
+                    class="text-white bg-yellow-600 hover:bg-yellow-700 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
+                    <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M4 4a2 2 0 012-2h8a2 2 0 012 2v12a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 0v12h8V4H6z"
+                            clip-rule="evenodd"></path>
+                    </svg>
+                    Add Product with JSON
+                </a>
             </div>
         </div>
     </div>
