--- a/orders.html
+++ b/orders.html
@@ -38,6 +38,13 @@
 
 <body class="bg-gray-50 dark:bg-gray-900">
     <div class="container mx-auto px-4 py-8">
+        <nav class="flex justify-end space-x-4 mb-6">
+            <a href="./index.html" class="text-blue-600 hover:underline">Home</a>
+            <a href="./users.html" class="text-blue-600 hover:underline">Manage Users</a>
+            <a href="./products.html" class="text-blue-600 hover:underline">Manage Products</a>
+            <a href="./orders.html" class="text-blue-600 hover:underline">Manage Orders</a>
+            <a href="./add-product-json.html" class="text-blue-600 hover:underline">Add Product with JSON</a>
+        </nav>
 
         <!-- Card wrapper to match requested UI: rounded-2xl, shadow-sm, border -->
         <div class="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 dark:bg-gray-800 dark:border-gray-700">
