--- a/products.html
+++ b/products.html
@@ -28,6 +28,13 @@
 
 <body class="antialiased bg-gray-50 text-slate-900">
     <div class="max-w-6xl mx-auto p-6">
+        <nav class="flex justify-end space-x-4 mb-6">
+            <a href="./index.html" class="text-blue-600 hover:underline">Home</a>
+            <a href="./users.html" class="text-blue-600 hover:underline">Manage Users</a>
+            <a href="./products.html" class="text-blue-600 hover:underline">Manage Products</a>
+            <a href="./orders.html" class="text-blue-600 hover:underline">Manage Orders</a>
+            <a href="./add-product-json.html" class="text-blue-600 hover:underline">Add Product with JSON</a>
+        </nav>
         <h1 class="text-3xl font-extrabold mb-6 tracking-tight text-slate-900">Manage Products</h1>
 
         <!-- Add/Edit Product Form -->
